[package]
name = "megastrife"
version = "0.1.0"
edition = "2021"

[dependencies]
minifb = "0.28"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
bitflags = "2.10.0"
lazy_static = "1.4"
thiserror = "2.0.17"

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = true