[package]
name = "megastrife"
version = "0.1.0"
edition = "2021"

[dependencies]
minifb = "0.28"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
bitflags = "2.10.0"
lazy_static = "1.4"
thiserror = "2.0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.12.0"
bincode = "2.0.1"
hashbrown = "0.16.1"
fixedbitset = "0.5.7"
intrusive-collections = "0.9"
slotmap = "1.0"
pathfinding = "4.14.0"
hecs = "0.10.5"
rand = "0.9.2"
rand_distr = "0.5.1"
noise = "0.9.0"
palette = "0.7.6"
image = "0.25.9"
gif = "0.14.1"
cpal = "0.16.0"
rodio = "0.21.1"
crossbeam = "0.8"
crossbeam-channel = "0.5"
dashmap = "6.1.0"
flume = "0.12.0"
fs_extra = "1.3"
walkdir = "2.3"
notify = "8.2.0"
# Para emulação precisa do PSG (SN76489)
# O crate `psg` emula o AY-3-8910/YM2149, que é um chip similar e de alta precisão.
psg = "1.0.1"
# Para sincronização, uma alternativa mais leve e rápida para std::sync::{Arc, Mutex}
parking_lot = "0.12"


[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = true
strip = "symbols"
overflow-checks = true
incremental = false
debug-assertions = false
rpath = false
optimize-size = false
